--- a/truthonthed/index.html
+++ b/truthonthed/index.html
@@ -10,7 +10,7 @@
     <meta content="Truth on The D" property="og:title"/>
     <meta content="Reclaim your power. Expose the truth. You're on the list. 😈" property="og:description"/>
     <meta content="https://www.truthonthed.com/rcobalt_drawing.jpg" property="og:image"/>
-    <title>TRUTH ON ON THE D</title>
+    <title>TRUTH ON THE D</title>
     <style>
         /* General Body Styles */
         body {
