--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 <!-- Blog Teaser Section -->
 <section style="margin: 60px auto; max-width: 800px; padding: 20px; background-color: #111; border-radius: 12px;">
     <h2 style="font-size: 28px; color: #f97316;">Latest Blog Post</h2>
-    <h3 style="font-size: 22px; color: #fff; margin-top: 10px;"><a href="moved-to-dallas.html" style="color: #f97316; text-decoration: none;">Here Comes the Lockdown, Welcome to Dallas</a></h3>
+    <h3 style="font-size: 22px; color: #fff; margin-top: 10px;"><a href="blog_chris_tim.html" style="color: #f97316; text-decoration: none;">The Scene I Didn't Audition For</a></h3>
     <p style="color: #ccc; margin-top: 10px;">
-        March 2020. A new city, a global lockdown, and a truth no one was ready to admit...<br>
-        <a href="moved-to-dallas.html" style="color: #888; text-decoration: underline;">Read more</a>
+        How two men — one with a Mini Cooper, the other with a theater résumé — helped expose a pattern of racism, exclusion, and digital sabotage.<br>
+        <a href="blog_chris_tim.html" style="color: #888; text-decoration: underline;">Read more</a>
     </p>
 </section>
 
