--- a/truthonthed/about.html
+++ b/truthonthed/about.html
@@ -101,31 +101,56 @@
     </div>
         </div>
     </div>
+<div style="padding: 40px;">
+ <h1>About This Site</h1>
+      <h2>Who Is This For?</h2>
+      <p>This site is for anyone who’s been gaslit, stalked, hacked, impersonated, blacklisted, or quietly sabotaged — and told to “move on” or “let it go.”</p>
+      <p>It’s for the ones who were pushed to the edge and then blamed for losing their balance.</p>
+      <p>It’s also for the ones doing the pushing — the bitter ex, the smug burner-account troll, the so-called professionals hiding behind company logos and legal threats. That includes the landlords who looked the other way, the attorneys who played dumb, the corporations who ghosted, and the elected officials who shrugged and said, “Not my problem.” If you’re complicit in the silence, then this site’s for you too — just not in the way you hoped.</p>
 
-  <section class="about-section">
-    <h2 class="text-2xl font-bold mb-2">About TruthOnTheD.com</h2>
-    <p class="mb-4">TruthOnTheD.com is a platform built for one reason: to expose the truth that others have tried to bury. This isn’t a gossip blog. It’s a digital war room—documenting the tactics, lies, and abuse used by a coordinated network of predators operating behind masks of respectability and influence.</p>
-    <p class="mb-4">Founded by Emmanuel Tarango, a seasoned project manager and outspoken voice for digital justice, this site exists to shine a spotlight where others flinch away: targeted harassment, digital stalking, blackmail, and coordinated psychological warfare—all wrapped in silence.</p>
+      <hr />
 
-    <h3 class="text-xl font-semibold mt-4 mb-2">Our Mission:</h3>
-    <ul class="list-disc list-inside mb-4">
-      <li>Expose the perpetrators who weaponize shame, technology, and status to harm others.</li>
-      <li>Connect with survivors of similar abuse, especially those within marginalized communities.</li>
-      <li>Pursue justice through transparency, legal action, and collective documentation.</li>
-    </ul>
+      <h2>Why I Created This</h2>
+      <p><strong>Let me be absolutely clear:</strong><br />
+      This is the first time in my life I’ve ever exposed anyone publicly. And it’ll likely be the only time.</p>
+      <p>I believe in privacy. I’ve lived by it. Even when I’ve been hurt, I’ve kept people’s secrets. That’s who I am.</p>
+      <p>But these people don’t believe in privacy — not for others. They believe in control, manipulation, and destruction.</p>
+      <p>And what they did to me crossed every line imaginable:</p>
+      <ul>
+        <li>Digital sabotage</li>
+        <li>Stalking</li>
+        <li>Impersonation</li>
+        <li>Smear campaigns</li>
+        <li>Isolation</li>
+        <li>Psychological warfare</li>
+        <li><em>Even an attempt on my life.</em> I was poisoned and had to call an ambulance. That story’s coming — it deserves its own post.</li>
+      </ul>
+      <p>So no — this isn’t gossip. This isn’t revenge. <strong>This is self-defense.</strong></p>
+      <p>I tried going through every proper channel. Police? Refused to refer my case. District Attorney? Won’t touch it unless it’s referred. A local attorney told me I had “no case” — not because there wasn’t one, but because of who I was going up against.</p>
+      <p>So I built this. Because silence almost killed me — and I won’t die quietly.</p>
 
-    <h3 class="text-xl font-semibold mt-4 mb-2">Why This Matters:</h3>
-    <p class="mb-4">Because this story isn’t just personal—it’s systemic. And for every person who speaks up, there are dozens who’ve been silenced. We believe in reclaiming power through exposure and using truth as leverage.</p>
-    <p class="mb-4">This isn’t a jab at Dallas–Fort Worth or the surrounding communities. There are good people here—but there’s also a side to it that thrives in secrecy. Our goal is to explore the backbone of this behavior: what it is, what compels those who engage in it, and why it’s so pervasive. By going public, we can find others who will share their experiences. Together, we can break it down, identify the patterns, trace the source—and weaken it.</p>
-    <p>This is dedicated to those who have been victimized. To those who lost their battle. And to those who are part of it: welcome to my D-List. That’s not a threat. It’s a spotlight.</p>
-  </section>
+      <hr />
+
+      <h2>This Is a Pattern</h2>
+      <p>People like this project their fears and insecurities onto whoever they’re targeting. They use whisper campaigns, group dynamics, and gaslighting to isolate and disempower.</p>
+      <p>But here’s the part they hate the most:<br /><strong>I don’t fold. I call it out. I document it. I put it online for the world to see.</strong></p>
+
+      <h3>This is for:</h3>
+      <ul>
+        <li>Anyone who’s ever been digitally harassed, stalked, outed, sabotaged, or silenced.</li>
+        <li>Anyone who feels like they’re going crazy — you’re not.</li>
+        <li>Anyone who’s scared — this is how you take your power back.</li>
+      </ul>
+
+      <p>This isn’t just storytelling. This is record-keeping. This is accountability. This is me standing the fuck up.</p>
+      <p>So if you’re part of this?<br /><strong>Welcome to the fucking spotlight.</strong><br />
+      Everyone else?<br /><strong>Let’s take our power back.</strong></p>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 TruthOnTheD.com | All Rights Reserved.</p>
-    <p><a href="legal.html">Legal Notice</a></p>
-    <div id="legal" class="mt-4 text-sm">
-      <p>This site is protected under First Amendment principles. Statements reflect personal opinion and lived experience. No defamatory intent is expressed, and individuals mentioned are referenced based on behavior and public information. This site exercises lawful commentary, fair use, and opinion as affirmed by Hustler v. Falwell and Milkovich v. Lorain Journal Co.</p>
-    </div>
+    <a href="legal.html">Legal Notice</a>
   </footer>
 </body>
 </html>
